# blurShell

./: CMakeLists.txt  abcShell.py  mayaConfigure.bat  meson.build
.github/workflows/: main.yml
src/: abcShell2.py  maxShellAlg.h  pluginMain.cpp  shell.cpp  shell.h
